# stacking_2d_systems

./: .gitignore  README.md  pyproject.toml
stacking_2d_systems/: auto_stack.py  build_cof.py  extract_cifs.py  file_typer.py  get_reduced.py  get_reduced_matid.py  plot_xrd.py  xrd_from_atoms.py
tests/: monolayer.cif  test_create_stack.py
